--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   ],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": ">=20.x",
+    "npm": ">=10.x"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^6.0.0",
